--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "mssql": "^3.3.0",
     "pg": "^6.0.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
